--- a/classes/MQTTClient.html
+++ b/classes/MQTTClient.html
@@ -17,16 +17,12 @@
 <h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
 <li><span class="tsd-signature-type">RemoteService</span>
-<section class="tsd-panel tsd-hierarchy">
-<h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
 <li><span class="target">MQTTClient</span>
-<section class="tsd-panel tsd-hierarchy">
-<h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
-<li><a href="MQTTServer.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTServer</a></li></ul></section></li></ul></section></li></ul></section><aside class="tsd-sources">
+<li><a href="MQTTServer.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTServer</a></li></ul></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L5">src/client/service/MQTTClient.ts:5</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L7">src/client/service/MQTTClient.ts:7</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -107,14 +103,14 @@
 <h4 class="tsd-returns-title">Returns <a href="MQTTClient.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTClient</a></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.constructor</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L9">src/client/service/MQTTClient.ts:9</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L11">src/client/service/MQTTClient.ts:11</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-protected"><a id="client" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>client</span><a href="#client" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">client<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">MqttClient</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L6">src/client/service/MQTTClient.ts:6</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L8">src/client/service/MQTTClient.ts:8</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-protected tsd-is-inherited tsd-is-external"><a id="localServices" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>local<wbr/>Services</span><a href="#localServices" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">local<wbr/>Services<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Set</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></div><aside class="tsd-sources">
@@ -158,7 +154,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>options</span><a href="#options" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">options<span class="tsd-signature-symbol">:</span> <a href="../interfaces/MQTTClientOptions.html" class="tsd-signature-type" data-tsd-kind="Interface">MQTTClientOptions</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L7">src/client/service/MQTTClient.ts:7</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L9">src/client/service/MQTTClient.ts:9</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-protected tsd-is-inherited tsd-is-external"><a id="promises" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>promises</span><a href="#promises" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">promises<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Map</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-symbol">{ </span>reject<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>ex<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">; </span>resolve<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></div><aside class="tsd-sources">
@@ -252,7 +248,7 @@ regular <code>&#39;error&#39;</code> listener is installed.</p>
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L20">src/client/service/MQTTClient.ts:20</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L23">src/client/service/MQTTClient.ts:23</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-protected"><a id="disconnect" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>disconnect</span><a href="#disconnect" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-protected">
@@ -260,7 +256,7 @@ regular <code>&#39;error&#39;</code> listener is installed.</p>
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L28">src/client/service/MQTTClient.ts:28</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L40">src/client/service/MQTTClient.ts:40</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="emit" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>emit</span><a href="#emit" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited tsd-is-external">
@@ -836,7 +832,7 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 <h4 class="tsd-returns-title">Returns <a href="MQTTClient.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTClient</a></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.registerNode</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L277">src/client/service/MQTTClient.ts:277</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L331">src/client/service/MQTTClient.ts:331</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-protected tsd-is-inherited tsd-is-external"><a id="registerPromise" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>register<wbr/>Promise</span><a href="#registerPromise" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-protected tsd-is-inherited tsd-is-external">
@@ -894,7 +890,7 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 <h4 class="tsd-returns-title">Returns <a href="MQTTClient.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTClient</a></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.registerService</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L296">src/client/service/MQTTClient.ts:296</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L350">src/client/service/MQTTClient.ts:350</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="remoteEvent" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>remote<wbr/>Event</span><a href="#remoteEvent" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -922,7 +918,7 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.remoteEvent</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L95">src/client/service/MQTTClient.ts:95</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L115">src/client/service/MQTTClient.ts:115</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="remotePull" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>remote<wbr/>Pull</span><a href="#remotePull" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -946,7 +942,7 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.remotePull</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L69">src/client/service/MQTTClient.ts:69</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L85">src/client/service/MQTTClient.ts:85</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="remotePush" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>remote<wbr/>Push</span><a href="#remotePush" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -956,13 +952,11 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 
 <h3>Returns</h3><p>Promise of completed push</p>
 </div>
-<div class="tsd-type-parameters">
-<h4 class="tsd-type-parameters-title">Type Parameters</h4>
 <section class="tsd-panel tsd-type-parameters">
 <h4>Type Parameters</h4>
 <ul class="tsd-type-parameters">
 <li>
-<h4>T<span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">DataFrame</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DataFrame</span><span class="tsd-signature-symbol">[]</span></h4></li></ul></section></div>
+<h4>T<span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">DataFrame</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DataFrame</span><span class="tsd-signature-symbol">[]</span></h4></li></ul></section>
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
 <ul class="tsd-parameter-list">
@@ -981,7 +975,7 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.remotePush</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L43">src/client/service/MQTTClient.ts:43</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L55">src/client/service/MQTTClient.ts:55</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="remoteServiceCall" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>remote<wbr/>Service<wbr/>Call</span><a href="#remoteServiceCall" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -1009,7 +1003,7 @@ including any wrappers (such as those created by <code>.once()</code>).</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides RemoteService.remoteServiceCall</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/service/MQTTClient.ts#L121">src/client/service/MQTTClient.ts:121</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/service/MQTTClient.ts#L145">src/client/service/MQTTClient.ts:145</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="removeAllListeners" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>remove<wbr/>All<wbr/>Listeners</span><a href="#removeAllListeners" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited tsd-is-external">
