--- a/classes/MQTTSourceNode.html
+++ b/classes/MQTTSourceNode.html
@@ -22,12 +22,10 @@
 <h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
 <li><span class="tsd-signature-type">RemoteSourceNode</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Out</span><span class="tsd-signature-symbol">, </span><a href="MQTTClient.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTClient</a><span class="tsd-signature-symbol">&gt;</span>
-<section class="tsd-panel tsd-hierarchy">
-<h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
-<li><span class="target">MQTTSourceNode</span></li></ul></section></li></ul></section><aside class="tsd-sources">
+<li><span class="target">MQTTSourceNode</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/nodes/source/MQTTSourceNode.ts#L4">src/client/nodes/source/MQTTSourceNode.ts:4</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/nodes/source/MQTTSourceNode.ts#L4">src/client/nodes/source/MQTTSourceNode.ts:4</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -84,13 +82,11 @@
 <ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
 <li class="tsd-signature tsd-anchor-link" id="constructor.new_MQTTSourceNode">new MQTTSource<wbr/>Node<span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Out</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">SourceNodeOptions</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="MQTTSourceNode.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTSourceNode</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Out</span><span class="tsd-signature-symbol">&gt;</span><a href="#constructor.new_MQTTSourceNode" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
-<div class="tsd-type-parameters">
-<h4 class="tsd-type-parameters-title">Type Parameters</h4>
 <section class="tsd-panel tsd-type-parameters">
 <h4>Type Parameters</h4>
 <ul class="tsd-type-parameters">
 <li>
-<h4>Out<span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">DataFrame</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Out</span><span class="tsd-signature-symbol">&gt;</span></h4></li></ul></section></div>
+<h4>Out<span class="tsd-signature-symbol"> extends </span><span class="tsd-signature-type">DataFrame</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Out</span><span class="tsd-signature-symbol">&gt;</span></h4></li></ul></section>
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
 <ul class="tsd-parameter-list">
@@ -99,7 +95,7 @@
 <h4 class="tsd-returns-title">Returns <a href="MQTTSourceNode.html" class="tsd-signature-type" data-tsd-kind="Class">MQTTSourceNode</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">Out</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides RemoteSourceNode&lt;Out, MQTTClient&gt;.constructor</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/client/nodes/source/MQTTSourceNode.ts#L5">src/client/nodes/source/MQTTSourceNode.ts:5</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/client/nodes/source/MQTTSourceNode.ts#L5">src/client/nodes/source/MQTTSourceNode.ts:5</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-protected tsd-is-inherited tsd-is-external"><a id="options" class="tsd-anchor"></a>
