--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 <a href="#embedded-mqtt-server" id="embedded-mqtt-server" style="color: inherit; text-decoration: none;">
   <h3>Embedded MQTT Server</h3>
 </a>
+<p>Using the embedded MQTT server will use <a href="https://github.com/moscajs/aedes">Aedes</a> as the broker. For more production
+ready deployments using a dedicated broker is recommended.</p>
 <pre><code class="language-typescript"><span class="hl-1">ModelBuilder</span><span class="hl-0">.</span><span class="hl-2">create</span><span class="hl-0">()</span><br/><span class="hl-0">    .</span><span class="hl-2">addService</span><span class="hl-0">(</span><span class="hl-3">new</span><span class="hl-0"> </span><span class="hl-2">MQTTServer</span><span class="hl-0">({</span><br/><span class="hl-0">        </span><span class="hl-1">port:</span><span class="hl-0"> </span><span class="hl-4">1443</span><span class="hl-0">          </span><span class="hl-5">// MQTT port</span><br/><span class="hl-0">    }))</span><br/><span class="hl-0">    .</span><span class="hl-2">from</span><span class="hl-0">(</span><span class="hl-3">new</span><span class="hl-0"> </span><span class="hl-2">MQTTSourceNode</span><span class="hl-0">({</span><br/><span class="hl-0">        </span><span class="hl-1">uid:</span><span class="hl-0"> </span><span class="hl-6">&quot;source&quot;</span><br/><span class="hl-0">    }))</span><br/><span class="hl-0">    .</span><span class="hl-2">to</span><span class="hl-0">()</span><br/><span class="hl-0">    .</span><span class="hl-2">build</span><span class="hl-0">();</span>
 </code></pre>
 
@@ -93,6 +95,7 @@ The API is exactly the same as the client example.</p>
 <td>Topic to publish completed event to a node with a certain &lt;uid&gt;</td>
 </tr>
 </tbody></table>
+<p><strong>Note:</strong> A prefix an be added to the topics in case the broker is used for multiple positioning systems.</p>
 
 <a href="#push-payload" id="push-payload" style="color: inherit; text-decoration: none;">
   <h3>Push Payload</h3>
@@ -169,5 +172,8 @@ The API is exactly the same as the client example.</p>
 <li class="tsd-kind-class"><a href="classes/MQTTSinkNode.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>MQTTSink<wbr/>Node</a></li>
 <li class="tsd-kind-class"><a href="classes/MQTTSourceNode.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>MQTTSource<wbr/>Node</a></li>
 <li class="tsd-kind-interface"><a href="interfaces/MQTTClientOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg>MQTTClient<wbr/>Options</a></li>
-<li class="tsd-kind-interface"><a href="interfaces/MQTTServerOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>MQTTServer<wbr/>Options</a></li></ul></nav></div></div>
+<li class="tsd-kind-interface"><a href="interfaces/MQTTPullOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>MQTTPull<wbr/>Options</a></li>
+<li class="tsd-kind-interface"><a href="interfaces/MQTTPushOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>MQTTPush<wbr/>Options</a></li>
+<li class="tsd-kind-interface"><a href="interfaces/MQTTServerOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>MQTTServer<wbr/>Options</a></li>
+<li class="tsd-kind-type-alias"><a href="types/MQTTNodeOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-4194304-path"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)" id="icon-4194304-text"></path></svg>MQTTNode<wbr/>Options</a></li></ul></nav></div></div>
 <div class="overlay"></div><script src="assets/main.js"></script></body></html>
