--- a/interfaces/MQTTServerOptions.html
+++ b/interfaces/MQTTServerOptions.html
@@ -17,12 +17,10 @@
 <h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
 <li><span class="tsd-signature-type">AedesOptions</span>
-<section class="tsd-panel tsd-hierarchy">
-<h4>Hierarchy</h4>
 <ul class="tsd-hierarchy">
-<li><span class="target">MQTTServerOptions</span></li></ul></section></li></ul></section><aside class="tsd-sources">
+<li><span class="target">MQTTServerOptions</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/server/service/MQTTServerOptions.ts#L3">src/server/service/MQTTServerOptions.ts:3</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L3">src/server/service/MQTTServerOptions.ts:3</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -45,6 +43,7 @@
 <a href="MQTTServerOptions.html#persistence" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>persistence?</span></a>
 <a href="MQTTServerOptions.html#port" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>port</span></a>
 <a href="MQTTServerOptions.html#preConnect" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>pre<wbr/>Connect?</span></a>
+<a href="MQTTServerOptions.html#prefix" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>prefix?</span></a>
 <a href="MQTTServerOptions.html#published" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>published?</span></a>
 <a href="MQTTServerOptions.html#queueLimit" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>queue<wbr/>Limit?</span></a>
 <a href="MQTTServerOptions.html#tls" class="tsd-index-link tsd-kind-property tsd-parent-kind-interface"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>tls?</span></a>
@@ -82,7 +81,7 @@
 <div class="tsd-comment tsd-typography"><p>Server certification (requires tls=true)</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/server/service/MQTTServerOptions.ts#L25">src/server/service/MQTTServerOptions.ts:25</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L29">src/server/service/MQTTServerOptions.ts:29</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a id="concurrency" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>concurrency</span><a href="#concurrency" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">concurrency<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
@@ -113,7 +112,7 @@
 <div class="tsd-comment tsd-typography"><p>Server private key (requires tls=true)</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/server/service/MQTTServerOptions.ts#L21">src/server/service/MQTTServerOptions.ts:21</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L25">src/server/service/MQTTServerOptions.ts:25</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a id="maxClientsIdLength" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>max<wbr/>Clients<wbr/>Id<wbr/>Length</span><a href="#maxClientsIdLength" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">max<wbr/>Clients<wbr/>Id<wbr/>Length<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
@@ -138,13 +137,20 @@
 <div class="tsd-comment tsd-typography"><p>Server port</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/server/service/MQTTServerOptions.ts#L7">src/server/service/MQTTServerOptions.ts:7</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L11">src/server/service/MQTTServerOptions.ts:11</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a id="preConnect" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>pre<wbr/>Connect</span><a href="#preConnect" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">pre<wbr/>Connect<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">PreConnectHandler</span></div><aside class="tsd-sources">
 <p>Inherited from AedesOptions.preConnect</p>
 <ul>
 <li>Defined in node_modules/aedes/types/instance.d.ts:52</li></ul></aside></section>
+<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="prefix" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>prefix</span><a href="#prefix" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
+<div class="tsd-signature">prefix<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div>
+<div class="tsd-comment tsd-typography"><p>Topic prefix</p>
+</div><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L7">src/server/service/MQTTServerOptions.ts:7</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a id="published" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>published</span><a href="#published" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">published<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">PublishedHandler</span></div><aside class="tsd-sources">
@@ -165,14 +171,14 @@
 <h3>Default</h3><p>false</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/server/service/MQTTServerOptions.ts#L17">src/server/service/MQTTServerOptions.ts:17</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L21">src/server/service/MQTTServerOptions.ts:21</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="websocket" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>websocket</span><a href="#websocket" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">websocket<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div>
 <div class="tsd-comment tsd-typography"><p>MQTT over websocket connection</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/95ee4b0/src/server/service/MQTTServerOptions.ts#L11">src/server/service/MQTTServerOptions.ts:11</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-mqtt/blob/0b9bf42/src/server/service/MQTTServerOptions.ts#L15">src/server/service/MQTTServerOptions.ts:15</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -212,6 +218,7 @@
 <li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a href="MQTTServerOptions.html#persistence" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>persistence?</a></li>
 <li class="tsd-kind-property tsd-parent-kind-interface"><a href="MQTTServerOptions.html#port" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>port</a></li>
 <li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a href="MQTTServerOptions.html#preConnect" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>pre<wbr/>Connect?</a></li>
+<li class="tsd-kind-property tsd-parent-kind-interface"><a href="MQTTServerOptions.html#prefix" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>prefix?</a></li>
 <li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a href="MQTTServerOptions.html#published" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>published?</a></li>
 <li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a href="MQTTServerOptions.html#queueLimit" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>queue<wbr/>Limit?</a></li>
 <li class="tsd-kind-property tsd-parent-kind-interface"><a href="MQTTServerOptions.html#tls" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>tls?</a></li>
